--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tanstack/db",
+  "name": "@uzini/db",
   "description": "A reactive client store for building super fast apps on sync",
   "version": "0.1.5",
   "dependencies": {
