--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tanstack/db-monorepo",
-  "private": true,
+  "private": false,
   "description": "Reactive client queryable store for sync-first applications",
   "version": "0.0.0",
   "repository": {
