add: private registery

--- a/packages/db-ivm/package.json
+++ b/packages/db-ivm/package.json
@@ -2,6 +2,9 @@
   "name": "@tanstack/db-ivm",
   "description": "Incremental View Maintenance for TanStack DB based on Differential Dataflow",
   "version": "0.1.2",
+  "publishConfig": {
+    "registry": "http://localhost:4873"
+  },
   "dependencies": {
     "fractional-indexing": "^3.2.0",
     "murmurhash-js": "^1.0.0",
