--- a/packages/query-db-collection/package.json
+++ b/packages/query-db-collection/package.json
@@ -38,8 +38,11 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/TanStack/db.git",
+    "url": "git+https://github.com/TanStack/db.git",
     "directory": "packages/query-db-collection"
+  },
+  "publishConfig": {
+    "registry": "http://localhost:4873"
   },
   "homepage": "https://tanstack.com/db",
   "keywords": [
