--- a/packages/react-db/package.json
+++ b/packages/react-db/package.json
@@ -15,6 +15,9 @@
     "react",
     "typescript"
   ],
+  "publishConfig": {
+    "registry": "http://localhost:4873"
+  },
   "packageManager": "pnpm@10.6.3",
   "dependencies": {
     "@tanstack/db": "workspace:*",
